# plant_app_repo

./: .gitignore  README.md
demo/: alembic.ini  pyproject.toml
demo/alembic/versions/: 7dd4dedf5803_add_plant_nickname_column_to_userplant.py
demo/flask_app/: __init__.py  auth.py  clean_waterwise_data.ipynb  commands.py  config.py  db.py  models.py  plant.py  schema.sql  user.py
demo/flask_app/data/: waterwise_plants_cleaned.csv
demo/flask_app/static/: style.css
demo/flask_app/templates/: base.html
demo/flask_app/templates/auth/: login.html  register.html
demo/flask_app/templates/plant/: add.html  index.html  save.html  update.html  user_plant_popup.html
demo/flask_app/templates/user/: edit_profile.html  user.html
demo/migrations/versions/: 8ac345f3e176_add_plant_nickname_to_userplant.py  c593b6900a3b_initial_migration.py
